--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1>Hello world!!!</h1>
+    <p>This is second version</p>
     <script src="script/main.js"></script>
 </body>
 </html>
