--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1>Hello world!!!</h1>
     <p>This is second version</p>
+    <p>This is fourth version</p>
     <script src="script/main.js"></script>
 </body>
 </html>
